Edit environment variables

--- a/secret/secret.yaml
+++ b/secret/secret.yaml
@@ -42,14 +42,22 @@ stringData:
   NAMESERVER: "kube-dns.kube-system.svc.cluster.local"
   SERVICE_API: "onlyoffice-api.default.svc.cluster.local:5050"
   SERVICE_API_SYSTEM: "onlyoffice-api-system.default.svc.cluster.local:5050"
-  SERVICE_URLSHORTENER: "onlyoffice-urlshortener.default.svc.cluster.local:5050"
+  SERVICE_CALENDAR: "onlyoffice-calendar.default.svc.cluster.local:5050"
+  SERVICE_CRM: "onlyoffice-crm.default.svc.cluster.local:5050"
+  SERVICE_STORAGE_ENCRYPTION: "onlyoffice-storage-encryption.default.svc.cluster.local:5050"
+  SERVICE_MAIL: "onlyoffice-mail.default.svc.cluster.local:5050"
+  SERVICE_STORAGE_MIGRATION: "onlyoffice-storage-migration.default.svc.cluster.local:5050"
+  SERVICE_NOTIFY: "onlyoffice-notify.default.svc.cluster.local:5050"
+  SERVICE_PROJECTS_SERVER: "onlyoffice-projects-server.default.svc.cluster.local:5050"
+  SERVICE_URLSHORTENER: "onlyoffice-urlshortener.default.svc.cluster.local:9999"
   SERVICE_STUDIO_NOTIFY: "onlyoffice-studio-notify.default.svc.cluster.local:5050"
+  SERVICE_SOCKET: "onlyoffice-socket.default.svc.cluster.local:9899"
+  SERVICE_TELEGRAM_SERVICE: "onlyoffice-telegram-service.default.svc.cluster.local:5050"
   SERVICE_PEOPLE_SERVER: "onlyoffice-people-server.default.svc.cluster.local:5050"
   SERVICE_FILES: "onlyoffice-files.default.svc.cluster.local:5050"
   SERVICE_FILES_SERVICES: "onlyoffice-files-services.default.svc.cluster.local:5050"
   SERVICE_STUDIO: "onlyoffice-studio.default.svc.cluster.local:5050"
   SERVICE_BACKUP: "onlyoffice-backup.default.svc.cluster.local:5050"
-  SERVICE_THUMBNAILS: "onlyoffice-thumbnails.default.svc.cluster.local:5050"
-  SERVICE_SH: "onlyoffice-urlshortener.default.svc.cluster.local:9999"
+  SERVICE_THUMBNAILS: "onlyoffice-thumbnails.default.svc.cluster.local:9800"
   DOCUMENT_SERVER: "onlyoffice-document-server.default.svc.cluster.local"
   SERVICE_PORT: "5050"
