--- a/app/onlyoffice-document-server.yaml
+++ b/app/onlyoffice-document-server.yaml
@@ -97,5 +97,5 @@ spec:
   volumes:
     - name: app-data
       persistentVolumeClaim:
-        claimName: app-data-pv-claim
+        claimName: app-data
     
