--- a/app/onlyoffice-api.yaml
+++ b/app/onlyoffice-api.yaml
@@ -25,7 +25,7 @@ spec:
 #    runAsGroup: 107
   containers:
   - name: onlyoffice-api
-    image: onlyoffice/4testing-appserver-api:0.0.9
+    image: onlyoffice/4testing-appserver-api:latest
     imagePullPolicy: IfNotPresent
     env:
     - name: MYSQL_ROOT_PASSWORD
