--- a/app/onlyoffice-files-services.yaml
+++ b/app/onlyoffice-files-services.yaml
@@ -25,7 +25,7 @@ spec:
 #    runAsGroup: 107
   containers:
   - name: onlyoffice-files-services
-    image: onlyoffice/4testing-appserver-files_services:0.0.9
+    image: onlyoffice/4testing-appserver-files-services:latest
     imagePullPolicy: IfNotPresent
     env:
     - name: MYSQL_ROOT_PASSWORD
