--- a/app/onlyoffice-files.yaml
+++ b/app/onlyoffice-files.yaml
@@ -25,7 +25,7 @@ spec:
 #    runAsGroup: 107
   containers:
   - name: onlyoffice-files
-    image: onlyoffice/4testing-appserver-files:0.0.9
+    image: onlyoffice/4testing-appserver-files:latest
     imagePullPolicy: IfNotPresent
     env:
     - name: MYSQL_ROOT_PASSWORD
