--- a/app/onlyoffice-proxy.yaml
+++ b/app/onlyoffice-proxy.yaml
@@ -34,7 +34,7 @@ spec:
 #    runAsGroup: 107
   containers:
   - name: onlyoffice-proxy
-    image: onlyoffice/4testing-appserver-proxy:0.0.9
+    image: onlyoffice/4testing-appserver-proxy:latest
     imagePullPolicy: IfNotPresent
     env:
     - name: MYSQL_ROOT_PASSWORD
@@ -80,7 +80,7 @@ spec:
 #      failureThreshold: 2
 #      httpGet:
 #        path: /
-#        port: 5050
+#        port: 8081
 #      periodSeconds: 10
 #      successThreshold: 1
 #      timeoutSeconds: 5
