--- a/app/onlyoffice-socket.yaml
+++ b/app/onlyoffice-socket.yaml
@@ -8,6 +8,9 @@ spec:
   - port: 5050
     name: http
     targetPort: 5050
+  - port: 9899
+    name: sock
+    targetPort: 9899
   selector:
     app: onlyoffice-socket
   type: ClusterIP
@@ -25,7 +28,7 @@ spec:
 #    runAsGroup: 107
   containers:
   - name: onlyoffice-socket
-    image: onlyoffice/4testing-appserver-socket:0.0.9
+    image: onlyoffice/4testing-appserver-socket:latest
     imagePullPolicy: IfNotPresent
     env:
     - name: MYSQL_ROOT_PASSWORD
@@ -59,6 +62,8 @@ spec:
     ports:
     - containerPort: 5050
       name: http
+    - containerPort: 9899
+      name: sock
 #    livenessProbe:
 #      failureThreshold: 2
 #      httpGet:
