--- a/app/onlyoffice-studio-notify.yaml
+++ b/app/onlyoffice-studio-notify.yaml
@@ -25,7 +25,7 @@ spec:
 #    runAsGroup: 107
   containers:
   - name: onlyoffice-studio-notify
-    image: onlyoffice/4testing-appserver-studio.notify:0.0.9
+    image: onlyoffice/4testing-appserver-studio-notify:latest
     imagePullPolicy: IfNotPresent
     env:
     - name: MYSQL_ROOT_PASSWORD
