--- a/app/onlyoffice-studio.yaml
+++ b/app/onlyoffice-studio.yaml
@@ -25,7 +25,7 @@ spec:
 #    runAsGroup: 107
   containers:
   - name: onlyoffice-studio
-    image: onlyoffice/4testing-appserver-studio:0.0.9
+    image: onlyoffice/4testing-appserver-studio:latest
     imagePullPolicy: IfNotPresent
     env:
     - name: MYSQL_ROOT_PASSWORD
