--- a/app/onlyoffice-files.yaml
+++ b/app/onlyoffice-files.yaml
@@ -23,6 +23,14 @@ spec:
 #  securityContext:
 #    runAsUser: 104
 #    runAsGroup: 107
+  initContainers:
+  - name: appserver-wait-storage
+    image: busybox:latest
+    imagePullPolicy: IfNotPresent
+    command: ['sh', '-c', "until cat /var/www/products/status.txt; do echo waiting for the storage to be ready; sleep 5; done"]
+    volumeMounts:
+    - name: files-data
+      mountPath: /var/www/products/
   containers:
   - name: onlyoffice-files
     image: onlyoffice/4testing-appserver-files:latest
@@ -73,8 +81,6 @@ spec:
     volumeMounts:
     - name: app-data
       mountPath: /app/onlyoffice/data
-    - name: files-data
-      mountPath: /var/www/products/ASC.Files/server/
     - name: people-data
       mountPath: /var/www/products/ASC.People/server/
     - name: crm-data
