--- a/app/onlyoffice-mail.yaml
+++ b/app/onlyoffice-mail.yaml
@@ -23,6 +23,14 @@ spec:
 #  securityContext:
 #    runAsUser: 104
 #    runAsGroup: 107
+  initContainers:
+  - name: appserver-wait-storage
+    image: busybox:latest
+    imagePullPolicy: IfNotPresent
+    command: ['sh', '-c', "until cat /var/www/products/status.txt; do echo waiting for the storage to be ready; sleep 5; done"]
+    volumeMounts:
+    - name: files-data
+      mountPath: /var/www/products/
   containers:
   - name: onlyoffice-mail
     image: onlyoffice/4testing-appserver-mail:latest
@@ -83,8 +91,6 @@ spec:
       mountPath: /var/www/products/ASC.Projects/server/
     - name: calendar-data
       mountPath: /var/www/products/ASC.Calendar/server/
-    - name: mail-data
-      mountPath: /var/www/products/ASC.Mail/server/
   volumes:
   - name: app-data
     persistentVolumeClaim:
