Change the name of a variable for dns

--- a/secret/secret.yaml
+++ b/secret/secret.yaml
@@ -39,7 +39,7 @@ metadata:
   name: appserver-proxy
 type: Opaque
 stringData:
-  NAMESERVER: "kube-dns.kube-system.svc.cluster.local"
+  DNS_NAMESERVER: "kube-dns.kube-system.svc.cluster.local"
   SERVICE_API: "onlyoffice-api.default.svc.cluster.local:5050"
   SERVICE_API_SYSTEM: "onlyoffice-api-system.default.svc.cluster.local:5050"
   SERVICE_CALENDAR: "onlyoffice-calendar.default.svc.cluster.local:5050"
