Add variables for appserver-proxy work

--- a/secret/secret.yaml
+++ b/secret/secret.yaml
@@ -40,6 +40,8 @@ metadata:
 type: Opaque
 stringData:
   DNS_NAMESERVER: "kube-dns.kube-system.svc.cluster.local"
+  MAP_HASH_BUCKET_SIZE: "map_hash_bucket_size 128;"
+  COUNT_WORKER_CONNECTIONS: "1024"
   SERVICE_API: "onlyoffice-api.default.svc.cluster.local:5050"
   SERVICE_API_SYSTEM: "onlyoffice-api-system.default.svc.cluster.local:5050"
   SERVICE_CALENDAR: "onlyoffice-calendar.default.svc.cluster.local:5050"
