--- a/app/onlyoffice-socket.yaml
+++ b/app/onlyoffice-socket.yaml
@@ -28,9 +28,8 @@ spec:
 #    runAsGroup: 107
   initContainers:
   - name: appserver-wait-storage
-    image: busybox:latest
+    image: onlyoffice/4testing-appserver-wait-bin-share:latest
     imagePullPolicy: IfNotPresent
-    command: ['sh', '-c', "until cat /var/www/products/status.txt; do echo waiting for the storage to be ready; sleep 5; done"]
     volumeMounts:
     - name: files-data
       mountPath: /var/www/products/
