Add the ssoauth service

--- a/secrets/secret.yaml
+++ b/secrets/secret.yaml
@@ -61,5 +61,6 @@ stringData:
   SERVICE_STUDIO: "onlyoffice-studio.default.svc.cluster.local:5050"
   SERVICE_BACKUP: "onlyoffice-backup.default.svc.cluster.local:5050"
   SERVICE_THUMBNAILS: "onlyoffice-thumbnails.default.svc.cluster.local:9800"
+  SERVICE_SSOAUTH: "onlyoffice-ssoauth.default.svc.cluster.local:9834"
   DOCUMENT_SERVER: "onlyoffice-document-server.default.svc.cluster.local"
   SERVICE_PORT: "5050"
