--- a/secrets/secret.yaml
+++ b/secrets/secret.yaml
@@ -26,11 +26,11 @@ stringData:
   JWT_HEADER: "AuthorizationJwt"
   JWT_IN_BODY: "true"
   DOCUMENT_SERVER_URL_PUBLIC: "/ds-vpath/"
-  DOCUMENT_SERVER_URL_INTERNAL: "http://onlyoffice-document-server.default.svc.cluster.local/"
+  DOCUMENT_SERVER_URL_INTERNAL: "http://onlyoffice-document-server/"
   DOCUMENT_SERVER_URL_CONVERTER: "/ds-vpath/ConvertService.ashx"
   KAFKA_HOST: "onlyoffice-kafka"
   ELK_HOST: "elasticsearch-master"
-  PROXY_HOST: "onlyoffice-proxy.default.svc.cluster.local"
+  PROXY_HOST: "onlyoffice-proxy"
 
 ---
 apiVersion: v1
@@ -39,28 +39,28 @@ metadata:
   name: appserver-proxy
 type: Opaque
 stringData:
-  DNS_NAMESERVER: "kube-dns.kube-system.svc.cluster.local"
-  MAP_HASH_BUCKET_SIZE: "map_hash_bucket_size 128;"
   COUNT_WORKER_CONNECTIONS: "1024"
-  SERVICE_API: "onlyoffice-api.default.svc.cluster.local:5050"
-  SERVICE_API_SYSTEM: "onlyoffice-api-system.default.svc.cluster.local:5050"
-  SERVICE_CALENDAR: "onlyoffice-calendar.default.svc.cluster.local:5050"
-  SERVICE_CRM: "onlyoffice-crm.default.svc.cluster.local:5050"
-  SERVICE_STORAGE_ENCRYPTION: "onlyoffice-storage-encryption.default.svc.cluster.local:5050"
-  SERVICE_MAIL: "onlyoffice-mail.default.svc.cluster.local:5050"
-  SERVICE_STORAGE_MIGRATION: "onlyoffice-storage-migration.default.svc.cluster.local:5050"
-  SERVICE_NOTIFY: "onlyoffice-notify.default.svc.cluster.local:5050"
-  SERVICE_PROJECTS_SERVER: "onlyoffice-projects-server.default.svc.cluster.local:5050"
-  SERVICE_URLSHORTENER: "onlyoffice-urlshortener.default.svc.cluster.local:9999"
-  SERVICE_STUDIO_NOTIFY: "onlyoffice-studio-notify.default.svc.cluster.local:5050"
-  SERVICE_SOCKET: "onlyoffice-socket.default.svc.cluster.local:9899"
-  SERVICE_TELEGRAM_SERVICE: "onlyoffice-telegram-service.default.svc.cluster.local:5050"
-  SERVICE_PEOPLE_SERVER: "onlyoffice-people-server.default.svc.cluster.local:5050"
-  SERVICE_FILES: "onlyoffice-files.default.svc.cluster.local:5050"
-  SERVICE_FILES_SERVICES: "onlyoffice-files-services.default.svc.cluster.local:5050"
-  SERVICE_STUDIO: "onlyoffice-studio.default.svc.cluster.local:5050"
-  SERVICE_BACKUP: "onlyoffice-backup.default.svc.cluster.local:5050"
-  SERVICE_THUMBNAILS: "onlyoffice-thumbnails.default.svc.cluster.local:9800"
-  SERVICE_SSOAUTH: "onlyoffice-ssoauth.default.svc.cluster.local:9834"
-  DOCUMENT_SERVER: "onlyoffice-document-server.default.svc.cluster.local"
+  NGINX_ENVSUBST_TEMPLATE_SUFFIX: ".upstream"
+  service_keepalive: "64"
+  API_HOST: "onlyoffice-api"
+  API_SYSTEM_HOST: "onlyoffice-api-system"
+  CALENDAR_HOST: "onlyoffice-calendar"
+  CRM_HOST: "onlyoffice-crm"
+  STORAGE_ENCRYPTION_HOST: "onlyoffice-storage-encryption"
+  MAIL_HOST: "onlyoffice-mail"
+  STORAGE_MIGRATION_HOST: "onlyoffice-storage-migration"
+  NOTIFY_HOST: "onlyoffice-notify"
+  PROJECTS_SERVER_HOST: "onlyoffice-projects-server"
+  URLSHORTENER_HOST: "onlyoffice-urlshortener"
+  STUDIO_NOTIFY_HOST: "onlyoffice-studio-notify"
+  SOCKET_HOST: "onlyoffice-socket"
+  TELEGRAM_SERVICE_HOST: "onlyoffice-telegram-service"
+  PEOPLE_SERVER_HOST: "onlyoffice-people-server"
+  FILES_HOST: "onlyoffice-files"
+  FILES_SERVICES_HOST: "onlyoffice-files-services"
+  STUDIO_HOST: "onlyoffice-studio"
+  BACKUP_HOST: "onlyoffice-backup"
+  THUMBNAILS_HOST: "onlyoffice-thumbnails"
+  SSOAUTH_HOST: "onlyoffice-ssoauth"
+  DOCUMENT_SERVER: "onlyoffice-document-server"
   SERVICE_PORT: "5050"
