--- a/configmaps/appserver.yaml
+++ b/configmaps/appserver.yaml
@@ -8,3 +8,4 @@ data:
     cp /etc/hosts ~/hosts.new
     sed -i '/^::1/s/^/#/' ~/hosts.new
     cp -f ~/hosts.new /etc/hosts
+    sed -i 's/localhost/127.0.0.1/g' /etc/nginx/conf.d/onlyoffice.conf
