--- a/templates/ingresses/appserver.yaml
+++ b/templates/ingresses/appserver.yaml
@@ -7,7 +7,8 @@ metadata:
     nginx.ingress.kubernetes.io/proxy-body-size: 100m
 spec:
   rules:
-  - http:
+  - host:
+    http:
       paths:
       - path: /
         pathType: Prefix
