--- a/templates/jobs/appserver-update.yaml
+++ b/templates/jobs/appserver-update.yaml
@@ -2,6 +2,10 @@ apiVersion: batch/v1
 kind: Job
 metadata:
   name: appserver-update
+  annotations:
+    "helm.sh/hook": pre-upgrade
+    "helm.sh/hook-weight": "3"
+    "helm.sh/hook-delete-policy": before-hook-creation,hook-succeeded
 spec:
   backoffLimit: 2
   template:
