Fix the prefix for the template

--- a/templates/secrets/appserver-proxy.yaml
+++ b/templates/secrets/appserver-proxy.yaml
@@ -5,7 +5,7 @@ metadata:
 type: Opaque
 stringData:
   COUNT_WORKER_CONNECTIONS: "1024"
-  NGINX_ENVSUBST_TEMPLATE_SUFFIX: ".upstream"
+  NGINX_ENVSUBST_TEMPLATE_SUFFIX: ".template"
   service_keepalive: "64"
   API_HOST: "onlyoffice-api"
   API_SYSTEM_HOST: "onlyoffice-api-system"
