--- a/templates/deployments/onlyoffice-mail.yaml
+++ b/templates/deployments/onlyoffice-mail.yaml
@@ -1,3 +1,4 @@
+{{- if .Values.onlyofficeMail.enabled }}
 apiVersion: apps/v1
 kind: Deployment
 metadata:
@@ -16,19 +17,23 @@ spec:
       labels:
         app: onlyoffice-mail
     spec:
-    #  securityContext:
-    #    runAsUser: 104
-    #    runAsGroup: 107
+      {{ if .Values.securityContext.enabled }}
+      securityContext:
+        runAsUser: {{ .Values.securityContext.runAsUser }}
+        runAsGroup: {{ .Values.securityContext.runAsGroup }}
+      {{ end }}
+      imagePullSecrets:
+      - name: myregistrykey
       initContainers:
       - name: appserver-wait-storage
-        image: onlyoffice/4testing-appserver-wait-bin-share:latest
+        image: onlyoffice/4testing-appserver-wait-bin-share:1.2.0-r01
         imagePullPolicy: IfNotPresent
         volumeMounts:
         - name: files-data
           mountPath: /var/www/products/
       containers:
       - name: onlyoffice-mail
-        image: onlyoffice/4testing-appserver-mail:latest
+        image: onlyoffice/4testing-appserver-mail:1.2.0-r01
         imagePullPolicy: IfNotPresent
         env:
         - name: MYSQL_ROOT_PASSWORD
@@ -44,20 +49,20 @@ spec:
         - name: DOCUMENT_SERVER_JWT_ENABLED
           valueFrom:
             secretKeyRef:
-              name: appserver-all
+              name: jwt
               key: JWT_ENABLED
         - name: DOCUMENT_SERVER_JWT_SECRET
           valueFrom:
             secretKeyRef:
-              name: appserver-all
+              name: jwt
               key: JWT_SECRET
         - name: DOCUMENT_SERVER_JWT_HEADER
           valueFrom:
             secretKeyRef:
-              name: appserver-all
+              name: jwt
               key: JWT_HEADER
         envFrom:
-        - secretRef:
+        - configMapRef:
             name: appserver-all
         ports:
         - containerPort: 5050
@@ -108,3 +113,4 @@ spec:
       - name: mail-data
         persistentVolumeClaim:
           claimName: mail-data
+{{- end }}
