--- a/templates/pvc/calendar-data.yaml
+++ b/templates/pvc/calendar-data.yaml
@@ -3,9 +3,9 @@ kind: PersistentVolumeClaim
 metadata:
   name: calendar-data
 spec:
-  storageClassName: nfs
+  storageClassName: {{ .Values.persistence.calendarData.storageClass }}
   accessModes:
   - ReadWriteMany
   resources:
     requests:
-      storage: 1Gi
+      storage: {{ .Values.persistence.calendarData.size }}
