--- a/templates/pvc/mail-data.yaml
+++ b/templates/pvc/mail-data.yaml
@@ -3,9 +3,9 @@ kind: PersistentVolumeClaim
 metadata:
   name: mail-data
 spec:
-  storageClassName: nfs
+  storageClassName: {{ .Values.persistence.mailData.storageClass }}
   accessModes:
   - ReadWriteMany
   resources:
     requests:
-      storage: 1Gi
+      storage: {{ .Values.persistence.mailData.size }}
