--- a/templates/statefulset/onlyoffice-api-system.yaml
+++ b/templates/statefulset/onlyoffice-api-system.yaml
@@ -9,7 +9,7 @@ spec:
     matchLabels:
       app: onlyoffice-api-system
   serviceName: onlyoffice-api-system
-  replicas: {{ .Values.onlyofficeApiSystem.replicaCount }}
+  replicas: 1
   updateStrategy:
     type: RollingUpdate
   podManagementPolicy: OrderedReady
@@ -37,7 +37,7 @@ spec:
       - name: myregistrykey
       initContainers:
       - name: appserver-init-storage
-        image: {{ .Values.onlyofficeApiSystem.initContainerImage }}
+        image: {{ .Values.images.initContainer.initStorage }}:{{ .Values.images.tag }}
         imagePullPolicy: IfNotPresent
         volumeMounts:
         - name: files-data
@@ -62,7 +62,7 @@ spec:
         {{ end }}
       containers:
       - name: onlyoffice-api-system
-        image: {{ .Values.onlyofficeApiSystem.image }}
+        image: {{ .Values.images.apiSystem }}:{{ .Values.images.tag }}
         imagePullPolicy: IfNotPresent
         env:
         - name: MYSQL_ROOT_PASSWORD
@@ -93,8 +93,10 @@ spec:
         envFrom:
         - configMapRef:
             name: appserver-all
+        - secretRef:
+            name: jwt
         ports:
-        - containerPort: 5050
+        - containerPort: {{ .Values.ports.appserver.http }}
           name: http
     #    livenessProbe:
     #      failureThreshold: 2
@@ -140,15 +142,23 @@ spec:
       - name: people-data
         persistentVolumeClaim:
           claimName: people-data
+      {{ if .Values.onlyofficeCrm.enabled }}
       - name: crm-data
         persistentVolumeClaim:
           claimName: crm-data
+      {{ end }}
+      {{ if .Values.onlyofficeProjectServer.enabled }}
       - name: project-data
         persistentVolumeClaim:
           claimName: project-data
+      {{ end }}
+      {{ if .Values.onlyofficeCalendar.enabled }}
       - name: calendar-data
         persistentVolumeClaim:
           claimName: calendar-data
+      {{ end }}
+      {{ if .Values.onlyofficeMail.enabled }}
       - name: mail-data
         persistentVolumeClaim:
           claimName: mail-data
+      {{ end }}
