--- a/templates/statefulset/onlyoffice-api.yaml
+++ b/templates/statefulset/onlyoffice-api.yaml
@@ -37,14 +37,14 @@ spec:
       - name: myregistrykey
       initContainers:
       - name: appserver-wait-storage
-        image: onlyoffice/4testing-appserver-wait-bin-share:1.2.0-r01
+        image: {{ .Values.images.initContainer.waitStorage }}:{{ .Values.images.tag }}
         imagePullPolicy: IfNotPresent
         volumeMounts:
         - name: files-data
           mountPath: /var/www/products/
       containers:
       - name: onlyoffice-api
-        image: onlyoffice/4testing-appserver-api:1.2.0-r01
+        image: {{ .Values.images.api }}:{{ .Values.images.tag }}
         imagePullPolicy: IfNotPresent
         env:
         - name: MYSQL_ROOT_PASSWORD
@@ -75,8 +75,10 @@ spec:
         envFrom:
         - configMapRef:
             name: appserver-all
+        - secretRef:
+            name: jwt
         ports:
-        - containerPort: 5050
+        - containerPort: {{ .Values.ports.appserver.http }}
           name: http
     #    livenessProbe:
     #      failureThreshold: 2
@@ -92,10 +94,10 @@ spec:
         volumeMounts:
         - name: app-data
           mountPath: /app/onlyoffice/data
-        - name: people-data
-          mountPath: /var/www/products/ASC.People/server/
         - name: files-data
           mountPath: /var/www/products/ASC.Files/server/
+        - name: people-data
+          mountPath: /var/www/products/ASC.People/server/
         {{ if .Values.onlyofficeCrm.enabled }}
         - name: crm-data
           mountPath: /var/www/products/ASC.CRM/server/
@@ -122,15 +124,23 @@ spec:
       - name: people-data
         persistentVolumeClaim:
           claimName: people-data
+      {{ if .Values.onlyofficeCrm.enabled }}
       - name: crm-data
         persistentVolumeClaim:
           claimName: crm-data
+      {{ end }}
+      {{ if .Values.onlyofficeProjectServer.enabled }}
       - name: project-data
         persistentVolumeClaim:
           claimName: project-data
+      {{ end }}
+      {{ if .Values.onlyofficeCalendar.enabled }}
       - name: calendar-data
         persistentVolumeClaim:
           claimName: calendar-data
+      {{ end }}
+      {{ if .Values.onlyofficeMail.enabled }}
       - name: mail-data
         persistentVolumeClaim:
           claimName: mail-data
+      {{ end }}
